--- a/.github/workflows/gatsby.yml
+++ b/.github/workflows/gatsby.yml
@@ -29,11 +29,7 @@ jobs:
       - name: Detect package manager
         id: detect-package-manager
         run: |
-          if [ -f "${{ github.workspace }}/yarn.lock" ]; then
-            echo "manager=yarn" >> $GITHUB_OUTPUT
-            echo "command=install" >> $GITHUB_OUTPUT
-            exit 0
-          elif [ -f "${{ github.workspace }}/package.json" ]; then
+          if [ -f "${{ github.workspace }}/package.json" ]; then
             echo "manager=npm" >> $GITHUB_OUTPUT
             echo "command=ci" >> $GITHUB_OUTPUT
             exit 0
@@ -64,7 +60,15 @@ jobs:
             ${{ runner.os }}-gatsby-build-
 
       - name: Install dependencies
-        run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }} --legacy-peer-deps
+        run: |
+          if [ -f "yarn.lock" ]; then
+            yarn install
+          elif [ -f "package.json" ]; then
+            npm ci --legacy-peer-deps
+          else
+            echo "Unable to determine package manager"
+            exit 1
+          fi
 
       - name: Build with Gatsby
         env:
